Removed TestRun instance from CliTestRunner class and made parameters static for ease of reference.